# mastering-performant-code

./: .gitignore  MANIFEST.in  README.md  build_wheel.py  check_wheel.py  pyproject.toml  pytest.ini  sw.js  test-chapters.js
.github/workflows/: build-wheel.yml  deploy-gh-pages.yml  tests.yml
mastering_performant_code/: __init__.py
src/: __init__.py
src/chapter_01/: __init__.py  config_manager.py  demo.py  hash_table.py  simple_set.py
src/chapter_02/: benchmarks.py  demo.py  profiler.py
src/chapter_03/: __init__.py  dynamic_array.py
src/chapter_04/: __init__.py  analyzer.py  demo.py  nodes.py  singly_linked_list.py  undo_redo.py
src/chapter_05/: __init__.py  analyzer.py
src/chapter_06/: analyzer.py  file_system_tree.py  iterative_bst.py
src/chapter_07/: analyzer.py  avl_node.py  avl_tree.py  database_index.py  demo.py
src/chapter_08/: __init__.py  applications.py
src/chapter_09/: __init__.py  analyzer.py  btree_node.py  demo.py
src/chapter_10/: compressed_trie.py  demo.py  spell_checker.py  trie.py
src/chapter_11/: __init__.py  binary_heap.py  demo.py
src/chapter_12/: __init__.py  analyzer.py  demo.py  disjoint_set.py  memory_tracked_disjoint_set.py  network_connectivity.py  optimized_disjoint_set.py
src/chapter_13/: hash_table.py
src/chapter_14/: analyzer.py  applications.py  counting_bloom_filter.py
src/chapter_15/: lfu_cache.py  lru_cache.py  performance_analyzer.py
src/chapter_16/: demo.py
tests/chapter_01/: run_tests.py  test_analyzer.py  test_config_manager.py  test_dynamic_array.py  test_hash_table.py  test_simple_set.py
tests/chapter_02/: __init__.py  run_tests.py  test_algorithms.py  test_benchmarks.py  test_demo.py  test_profiler.py
tests/chapter_03/: __init__.py  test_applications.py  test_benchmarks.py  test_chapter_03.py  test_dynamic_array.py
tests/chapter_04/: __init__.py  test_doubly_linked_list.py  test_iterator.py  test_optimized_nodes.py  test_singly_linked_list.py  test_undo_redo.py
tests/chapter_05/: test_analyzer.py  test_priority_queue.py  (+2 more)
web-companion/: .eslintrc.js  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  test-deployment.html  tsconfig.json  vite.config.js
(+191 files in other folders)
