[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastering_performant_code"
version = "1.0.0"
description = "A comprehensive companion repository for the book 'Mastering Performant Code' - your journey into Python performance optimization, data structures, and algorithmic efficiency."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jayasimha Raghavan", email = "mr.jayasimha@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.12"
keywords = ["performance", "data-structures", "algorithms", "optimization", "education"]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/mastering-performant-code"
Repository = "https://github.com/yourusername/mastering-performant-code"
Documentation = "https://github.com/yourusername/mastering-performant-code#readme"
"Bug Tracker" = "https://github.com/yourusername/mastering-performant-code/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true 

[tool.setuptools.packages.find]
where = ["src"]
include = ["mastering_performant_code*"]

[tool.setuptools.package-data]
"mastering_performant_code" = ["*.json", "*.ini"]

[tool.setuptools.data-files]
"mastering_performant_code" = [
    "README.md",
    "LICENSE",
    "pytest.ini",
]

[tool.setuptools.dynamic]
version = {attr = "src.mastering_performant_code.__version__"}

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__", "*.pyo", "*.pyd", ".git*", ".pytest_cache*", "temp*", "web-companion*", "pyodide-demo*"]

[tools.pytest.ini_options]
testpaths = ["tests"]
adopts = "-ra"
